# scaf

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  conanfile.py  main.cpp  readme.md
.devcontainer/: devcontainer.json  prepare_env.sh
include/: AclMessage.h  Agent.h  Behaviour.h  ConversationHandler.h  Performative.h  utils.h
scaf/: AclMessage.h  Agent.h  Behaviour.h  CMakeLists.txt  CommunicationHandler.h  ConversationHandler.h  Error.h  ErrorHandler.h  Exceptions.h  JsonSerializer.h  SynchronizedMap.h  ThreadManager.h  Uid.h  empty.cpp  utils.h
scaf/utils/: nlohman_json_serializers.h  safeCall.h
tests/: CMakeLists.txt  main.cpp
